redirect_to_container/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-clusterip
subsets:
  - addresses:
      - ip: 10.0.3.11
    ports:
      - port: 8080
