redirect_to_container/service_none.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service-clusterip
spec:
  clusterIP: None
  ports:
    - port: 8080
