redirect_to_container/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts: 
        - tomcat.rbvh-etm-cloud.com
      secretName: letsencrypt-prod
  rules:
  - host: tomcat.rbvh-etm-cloud.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-clusterip
            port:
              number: 8080
